# tidy-browser

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  check.sh  rust-analyzer.json  rust-toolchain.toml  rustfmt.toml  targets.md
.cargo/: config.toml
.github/workflows/: clippy.yml  fmt.yml  main.yml  publish.yml.bak  release-npm.yml  release-python.yml  release.yml  test.yml
bindgen/node/: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json
bindgen/node/__test__/: index.spec.ts
bindgen/node/src/: chromium.rs  firefox.rs  lib.rs  safari.rs
bindgen/python/: .gitignore  Cargo.toml  README.md  decrypt_cookies.pyi  pyproject.toml
bindgen/python/python/: .gitignore  example.py
bindgen/python/python/decrypt_cookies/: __init__.py  decrypt_cookies.pyi
bindgen/python/src/: chromium.rs  firefox.rs  lib.rs  safari.rs
crates/binary-cookies/: CHANGELOG.md  Cargo.toml  README.md
crates/binary-cookies/examples/: encode.rs  parallel.rs  sync.rs  tokio.rs
crates/binary-cookies/src/: cookie.rs  error.rs  lib.rs  parser.rs  tests.rs
crates/binary-cookies/src/async/: stream.rs
crates/binary-cookies/src/decode/: binary_cookies.rs  cookies.rs  meta.rs  mod.rs  pages.rs  stream.rs  tests.rs
crates/binary-cookies/src/parser/: mod.rs  tests.rs
crates/binary-cookies/src/sync/: bc.rs  cookie.rs  cursor.rs  meta.rs  mod.rs  page.rs  stream.rs  tests.rs
crates/binary-cookies/src/tokio/: bc.rs  cookie.rs  cursor.rs  meta.rs  mod.rs  page.rs  stream.rs
crates/binary-cookies/test-resource/: BinaryCookies.binarycookies  BinaryCookies.cookie  BinaryCookies.page
crates/binary-cookies/tests/: async_test.rs  sync_test.rs
crates/chromium-crypt/: Cargo.toml
crates/chromium-crypt/src/: error.rs  lib.rs  linux.rs
crates/chromium-crypt/src/win/: mod.rs
crates/chromium-crypto/: CHANGELOG.md  Cargo.toml  README.md
crates/chromium-crypto/src/: error.rs  lib.rs  linux.rs  mac.rs
crates/chromium-crypto/src/win/: impersonate.rs  local_state.rs  mod.rs
crates/decrypt-browser/: Cargo.toml
crates/decrypt-cookies/: CHANGELOG.md  Cargo.toml  README.md
crates/decrypt-cookies/examples/: basic_usage.rs  for_leetcode.rs  generic.rs  iterable.rs  new_browser.rs  on_linux.rs  reqwest.rs  special_channel.rs
crates/decrypt-cookies/src/: lib.rs  prelude.rs
crates/decrypt-cookies/src/browser/: builder.rs  chromium.rs  cookies.rs  firefox.rs  info.rs  mod.rs
crates/decrypt-cookies/src/chromium/: builder.rs  local_state.rs  mod.rs
crates/decrypt-cookies/src/chromium/crypto/: linux.rs  macos.rs  mod.rs  win.rs
crates/decrypt-cookies/src/chromium/items/: mod.rs
crates/decrypt-cookies/src/chromium/items/cookie/: cookie_dao.rs  dao.rs  mod.rs
crates/decrypt-cookies/src/chromium/items/cookie/cookie_entities/: cookies.rs  meta.rs  mod.rs  prelude.rs
crates/decrypt-cookies/src/chromium/items/cookie/entities/: cookies.rs  meta.rs
crates/decrypt-cookies/src/chromium/items/passwd/: login_data_dao.rs  mod.rs
crates/decrypt-cookies/src/chromium/items/passwd/login_data_entities/: insecure_credentials.rs  logins.rs  logins_edge_extended.rs  meta.rs  mod.rs  password_notes.rs  prelude.rs  stats.rs  sync_entities_metadata.rs  sync_model_metadata.rs
crates/decrypt-cookies/src/chromium/utils/: crypto.rs  mod.rs  path.rs
crates/decrypt-cookies/src/chromium/utils/linux/: crypto.rs  path.rs
crates/decrypt-cookies/src/chromium/utils/macos/: crypto.rs  path.rs
crates/decrypt-cookies/src/chromium/utils/win/: crypto.rs  mod.rs  path.rs
crates/decrypt-cookies/src/firefox/: builder.rs  mod.rs  path.rs
crates/decrypt-cookies/src/firefox/items/: mod.rs
crates/decrypt-cookies/src/firefox/items/cookie/: dao.rs  mod.rs
crates/decrypt-cookies/src/firefox/items/cookie/entities/: moz_cookies.rs
crates/decrypt-cookies/src/firefox/items/passwd/: dao.rs  mod.rs
crates/decrypt-cookies/src/firefox/items/passwd/key4db/: meta_data.rs  mod.rs  nss_private.rs  prelude.rs
crates/decrypt-cookies/src/firefox/linux/: crypto.rs  mod.rs  path.rs
crates/decrypt-cookies/src/firefox/macos/: path.rs
crates/decrypt-cookies/src/firefox/win/: path.rs
crates/decrypt-cookies/src/safari/: mod.rs
crates/decrypt-cookies/src/safari/items/: mod.rs
crates/decrypt-cookies/src/safari/items/cookie/: mod.rs
crates/decrypt-cookies/src/safari/utils/: binary_cookies.rs  crypto.rs  mod.rs
crates/decrypt-cookies/src/utils/: binary_cookies.rs  mod.rs
crates/decrypt-cookies/tests/: browsers.rs  check_it_compile.rs  chromium_passwd_work.rs  cookies_work.rs  get_csrf_session.rs  inspect_service_work.rs  reqwest_jar.rs  safari_work.rs
crates/tidy-browser/: CHANGELOG.md  Cargo.toml  README.md
crates/tidy-browser/src/: args.rs  binary_cookies.rs  chromium.rs  cli.rs  error.rs  firefox.rs  lib.rs  main.rs  safari.rs  utils.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: args.rs  lib.rs  main.rs
