[package]
name = "decrypt-cookies-node"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "A decrypt browser package"
homepage = "https://github.com/saying121/tidy-browser/tree/master/bindgen/node"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { workspace = true }
decrypt-cookies-rs = { workspace = true, default-features = false, features = [
  "Safari",
  "chromium",
  "ffi",
  "firefox",
  "tracing",
] }
napi = { workspace = true }
napi-derive = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true
