[project]
name = "decrypt_cookies"
readme  = "./README.md"
description = "Decrypt cookies from browser"
requires-python = ">=3.8"
license = "LGPL-3.0-or-later"
authors = [{ name = "saying121", email = "sayin121@outlook.com" }]
keywords = ["Chromium", "Firefox", "Safari", "cookies", "decrypt"]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Internet :: WWW/HTTP :: Session",
]
dynamic = ["version"]

[project.urls]
# documentation = "https://github.com/saying121/tidy-browser"
homepage = "https://github.com/saying121/tidy-browser/tree/master/bindgen/python"
repository = "https://github.com/saying121/tidy-browser"

[project.optional-dependencies]
requests = ["requests (>=2.23.0,<3.0.0)"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
