[package]
name = "chromium-crypt"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Chromium crypt"
homepage = "https://github.com/saying121/tidy-browser/tree/master/crates/chromium-crypt-linux"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

exclude = ["tests/", "examples", "./CHANGELOG.md"]

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cfg-if = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aes = { workspace = true }
cbc = { workspace = true }
pbkdf2 = { workspace = true, features = ["sha1"] }
sha1 = { workspace = true }

secret-service = { workspace = true, default-features = true, features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
aes = { workspace = true }
cbc = { workspace = true }
pbkdf2 = { workspace = true, features = ["sha1"] }
sha1 = { workspace = true }

keyring = { workspace = true, default-features = false, features = [
    "apple-native",
] } # It is not working as expected on Linux.

[target.'cfg(target_os = "windows")'.dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

aes-gcm = { workspace = true }
base64 = { workspace = true }
windows = { workspace = true, features = ["Win32_Security_Cryptography"] }

[lints]
workspace = true
