[package]
name = "chromium-crypto"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Chromium crypt"
homepage = "https://github.com/saying121/tidy-browser/tree/master/crates/chromium-crypto"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["./CHANGELOG.md", "examples", "tests/"]

[dependencies]
cfg-if = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
tracing = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
TinyUFO = { workspace = true }
aes = { workspace = true }
block-padding = { workspace = true }
cbc = { workspace = true }
pbkdf2 = { workspace = true, features = ["sha1"] }
sha1 = { workspace = true }
secret-service = { workspace = true, default-features = true, features = [
  "rt-tokio-crypto-rust",
] }

[target.'cfg(target_os = "macos")'.dependencies]
aes = { workspace = true }
block-padding = { workspace = true }
cbc = { workspace = true }
pbkdf2 = { workspace = true, features = ["sha1"] }
sha1 = { workspace = true }
keyring = { workspace = true, default-features = false, features = [
  "apple-native",
] }  # It is not working as expected on Linux.

[target.'cfg(target_os = "windows")'.dependencies]
chacha20poly1305 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
winnow = { workspace = true }
aes-gcm = { workspace = true }
aead = { workspace = true, features = ["std"] }
base64 = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Security_Cryptography",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Wdk_System_SystemServices",
] }

[features]
tracing = ["dep:tracing"]

[lints]
workspace = true
