[package]
name = "decrypt-cookies"
version = "0.7.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "A decrypt browser crate"
homepage = "https://github.com/saying121/tidy-browser/tree/master/crates/decrypt-cookies"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["./CHANGELOG.md", "examples", "tests/"]

[dependencies]
anyhow = { workspace = true }
binary-cookies = { workspace = true, features = ["tokio"], optional = true }
chromium-crypto = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["cookies"], optional = true }
rust-ini = { workspace = true }  # firefox
sea-orm = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
const_format = { workspace = true }

[target.'cfg(windows)'.dependencies]
rawcopy-rs-next = { workspace = true }

[features]
Safari = ["dep:binary-cookies"]  # `binary_cookies` does not depend on Macos
default = ["reqwest", "tracing"]
reqwest = ["dep:reqwest"]
tracing = ["dep:tracing", "chromium-crypto/tracing"]

[lints]
workspace = true
