[package]
name         = "tidy-browser"
version      = "0.1.0"
description  = "Tidy up browser information."
license      = { workspace = true }
edition      = { workspace = true }
authors      = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }
rust-version = { workspace = true }

exclude = ["tests/", "examples"]

[dependencies]
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "tracing"] }
clap               = { version = "^4" }
miette             = { workspace = true, features = ["fancy"] }
decrypt-cookies    = { workspace = true }
strum              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
