[package]
name = "tidy-browser"
version = "0.1.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Tidy up browser information."
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["CHANGELOG.md", "examples", "tests/"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
decrypt-cookies = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
decrypt-cookies = { workspace = true, features = ["Safari"] }
