[package]
name = "tidy-browser"
version = "0.3.3"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Tidy up browser information."
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["CHANGELOG.md", "examples", "tests/"]

[dependencies]
binary-cookies = { workspace = true, features = ["csv", "serde", "sync"] }
clap = { workspace = true, features = ["derive"] }
clap_complete_command = { workspace = true }
decrypt-cookies = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-jsonlines = { workspace = true, features = ["async"] }
snafu = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
decrypt-cookies = { workspace = true, features = ["Safari"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/tidy-browser-v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
