[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
duct = { workspace = true }
which = { workspace = true }
owo-colors = { workspace = true }

[lints]
workspace = true
